Fixed image path problem and fixed height problem in register.php... I wonder why it didn't stretch out all the content?

--- a/php-test/css/home.css
+++ b/php-test/css/home.css
@@ -152,7 +152,7 @@ img.center {
 }
 
 #register-text-description button i {
-	background-image: url('images/homepage-signup-button.png');
+	background-image: url('../images/homepage-signup-button.png');
 	background-position: center;
 	background-repeat: no-repeat;
 	position: absolute;
