--- a/php-test/css/register.css
+++ b/php-test/css/register.css
@@ -4,6 +4,7 @@
 
 #content-wrapper {
 	width: 1000px;
+	height: 1100px;
 	position: relative;
 	left: 50%;
 	margin-left: -500px;
@@ -68,9 +69,13 @@
 	border: #cfcfcf 1px solid;
 }
 
-h2 {
+h2, h3 {
 	font-weight: 400;
-	margin: 24px 0;
+	margin: 0 0 24px 0;
+}
+
+h2 {
+	margin-top: 24px;
 }
 
 input {
